--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="app">
         <h1>{{ message }}</h1>
+        <img v-bind:src="image" alt="random image">
     </div>
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
