--- a/index.html
+++ b/index.html
@@ -7,10 +7,29 @@
     <title>Hello Vue</title>
 </head>
 
+<style>
+    body {
+        background-color: #1c1c1c;
+
+        & h1 {
+            text-align: center;
+        }
+
+        & img {
+            display: block;
+            margin: auto;
+        }
+    }
+
+    .vuegreen {
+        color: #42B883;
+    }
+</style>
+
 <body>
     <div id="app">
-        <h1>{{ message }}</h1>
-        <img v-bind:src="image" alt="random image">
+        <h1 :class="textColor">{{ message }}</h1>
+        <img :src="image" alt="random image">
     </div>
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
